Prevent X overflow on Firefox mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f1f5f9;
+  overflow-x: hidden;
 }
 
 #root{
